--- a/src/main/webapp/payment.html
+++ b/src/main/webapp/payment.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #dfe3ee;
         }
 
         .container {
             max-width: 600px;
-            margin-top: 60px;
+            margin-top: 10vh;
             padding: 40px;
             background-color: #ffffff;
             border-radius: 10px;
@@ -22,33 +22,41 @@
 
         h1 {
             font-size: 2rem;
-            color: #28a745;
+            color: 	#0084ff;
+            letter-spacing: 1px;
+            text-shadow: 0 0 1.2px black;
             margin-bottom: 20px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
         .form-control {
-            border-radius: 30px;
-            box-shadow: inset 0px 3px 6px rgba(0, 0, 0, 0.05);
+            margin-bottom: 4px;
+            border-radius: 10px;
+            border: 1px black;
+            box-shadow: 0 1px 2px rgba(0, 0, 0);
         }
 
         .btn-success {
+            background-color: 	#365899;
             font-size: 1.2rem;
             font-weight: bold;
-            border-radius: 30px;
+            border-radius: 1px;
             padding: 10px;
+            box-shadow: 0 1px 2px black;
+            border: 0;
             transition: all 0.3s ease;
         }
 
         .btn-success:hover {
-            background-color: #218838;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            background-color: #365899;
+            box-shadow: 0px 4px 10px rgb(0, 0, 0);
         }
     </style>
 </head>
 
 <body>
     <div class="container text-center">
-        <h1>Premium Features Unlock, User</h1>
+        <h1>Unlock Premium Features, User</h1>
 
         <!-- User Information Form -->
         <input type="text" id="name" class="form-control my-3" placeholder="Enter your name" />
